--- a/_config.yml
+++ b/_config.yml
@@ -633,7 +633,7 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/custom_about_banner.jpg
+  banner_img: /img/beach.jpg
   banner_img_height: 60
   avatar: /img/your_avatar.jpg
   name: "Your Name"
